--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Olly is cooler</title>
+</head>
+<body>
+    <h1>I am the coolest</h1>
+</body>
+</html>
