--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css"/>
     <title>Olly is cooler</title>
 </head>
 <body>
     <h1>I am the coolest</h1>
+    <img src="LeMonke.webp" class= "LeMonke"/>
+    <h2> LeMonke </h2>
 </body>
 </html>
