added colour change part

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css"/>
     <title>Olly is cooler</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Emblema+One&family=Rock+Salt&display=swap" rel="stylesheet">
+<script src="colorScript.js"></script>
 </head>
 <body>
     <h1>I am the coolest</h1>
     <img src="LeMonke.webp" class= "LeMonke"/>
+    <button id ="colorButton" class="colorButton" onclick="Changecolor()">Button</button>
     <h2> LeMonke </h2>
 </body>
 </html>
