--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <script src="colorScript.js"></script>
 </head>
 <body>
-    <h1 id="title">I am the coolest</h1>
+    <h1 id="title">This is my personal website</h1>
     <img src="LeMonke.webp" class= "LeMonke"/>
     <button id ="colorButton" class="colorButton" onclick="Changecolor()">Button</button>
-    <h2 id="text"> LeMonke </h2>
+    <h2 id="text"> get out </h2>
 </body>
 </html>
